<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{ff782142-a8f6-49f1-86c3-1589baad0be2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL		
		fbLocalTime	:	FB_LocalSystemTime;
		iYear		:	UINT;
		iMonth		:	UINT;
		iDay		:	UINT;
		iHour		:	UINT;
		iMinute		:	UINT;
		iSecond		:	UINT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>